--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,8 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #f8a19f;
+  /*--bs-primary: #f8a19f;*/
+  --bs-primary: #581d2d;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
