--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  /*--bs-primary: #581d2d;*/
+  /*--bs-primary: #f8a19f;*/
   --bs-primary: #581d2d;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
@@ -74,7 +74,7 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  /*--bs-link-color: #581d2d;
+  /*--bs-link-color: ##f8a19f;
   --bs-link-hover-color: #f7cbc9;*/
   --bs-link-color:#ad3958;
   --bs-link-hover-color:#822b42;
