--- a/css/styles.css
+++ b/css/styles.css
@@ -36,15 +36,18 @@
   --bs-gray-900: #212529;
   /*--bs-primary: #f8a19f;*/
   --bs-primary: #581d2d;
-  --bs-secondary: #6c757d;
+  /*--bs-secondary: #6c757d;*/
+  --bs-secondary:#aa435c;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 248, 161, 159;
-  --bs-secondary-rgb: 108, 117, 125;
+  /*--bs-primary-rgb: 248, 161, 159;*/
+  --bs-primary-rgb: 173, 57, 88;
+  /*--bs-secondary-rgb: 108, 117, 125;*/
+  --bs-secondary-rgb: 170, 67, 92;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
